--- a/index.html
+++ b/index.html
@@ -5,59 +5,22 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 
 		<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+
 		<link rel="stylesheet/less" type="text/css" href="assets/less/base.less" />
+
+		<style type="text/css">
+			html, body {
+				height:	100%;
+			}
+		</style>
 	</head>
-	<body>
-		<div id="header">
-			<a href="#null" class="icon-reorder openstack"></a>
-			<h1>Top 10</h1>
-		</div>
-		<div id="menu">
-			<ul>
-				<li class="active">Today</li>
-				<li>Week</li>
-				<li>Month</li>
-			</ul>
-		</div>
+	<body id="login">
+		<h1>Code<span>chart</span></h1>
+		<span class="icon-bar-chart bigicon"></span>
+		<h2>View &amp; share trending GitHub projects</h2>
+		<a href="top_all.html" id="github_connect">Login with <span>GitHub</span></a>
 
-		<ul id="ranking">
-			<li>
-				<h2>google / lisp-koans</h2>
-				<p>Common Lisp Koans is a language learning exercise in the same vein as the ruby koans, python koan...</p>
-				<ul class="scores">
-					<li><span class="icon-star"></span> 192</li>
-					<li><span class="icon-code-fork"></span> 13</li>
-				</ul>
-			</li>
-
-			<li>
-				<h2>bchanx / logos-in-pure-css</h2>
-				<p>Company logos created in pure CSS.</p>
-				<ul class="scores">
-					<li><span class="icon-star"></span> 116</li>
-					<li><span class="icon-code-fork"></span> 9</li>
-				</ul>
-			</li>
-
-			<li>
-				<h2>google / lisp-koans</h2>
-				<p>Common Lisp Koans is a language learning exercise in the same vein as the ruby koans, python koan...</p>
-				<ul class="scores">
-					<li><span class="icon-star"></span> 192</li>
-					<li><span class="icon-code-fork"></span> 13</li>
-				</ul>
-			</li>
-
-			<li>
-				<h2>bchanx / logos-in-pure-css</h2>
-				<p>Company logos created in pure CSS.</p>
-				<ul class="scores">
-					<li><span class="icon-star"></span> 116</li>
-					<li><span class="icon-code-fork"></span> 9</li>
-				</ul>
-			</li>
-		</ul>
-		
 		<!-- Javascript Assets -->
 		<script type="text/javascript" src="assets/js/less.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.js"></script>
